--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "jquery": "^3.7.0",
     "pinia": "^2.1.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.2",
