--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@vuepic/vue-datepicker": "^5.2.1",
+    "dayjs": "^1.11.8",
     "jquery": "^3.7.0",
     "pinia": "^2.1.3",
     "vite-plugin-vuetify": "^1.0.2",
