--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "@mdi/font": "^7.2.96",
     "@vuepic/vue-datepicker": "^5.2.1",
     "dayjs": "^1.11.8",
     "jquery": "^3.7.0",
     "pinia": "^2.1.3",
+    "qrcode": "^1.5.3",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue": "^3.3.2",
+    "vue": "^3.3.4",
     "vue-router": "^4.2.0",
     "vuetify": "^3.3.2"
   },
