--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dayjs": "^1.11.8",
     "jquery": "^3.7.0",
     "pinia": "^2.1.3",
-    "qrcode": "^1.5.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
+    "vue-barcode-reader": "^1.0.3",
     "vue-router": "^4.2.0",
     "vuetify": "^3.3.2"
   },
